--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
         <dependency>
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>okhttp</artifactId>
-            <version>4.12.0</version> <!-- 使用最新版本 -->
+            <version>5.0.0-alpha.12</version> <!-- 使用最新版本 -->
         </dependency>
 
         <dependency>
