完善了卷的管理功能

--- a/src/main/resources/message/message.properties
+++ b/src/main/resources/message/message.properties
@@ -8,3 +8,5 @@ unknownNetworkOperationException=Unknown Network Operation Exception.
 noSuchNetwork=Network %network% does not exist.
 internalServerError=Internal Server Error: %msg%.
 noSuchImageException=Image %image% does not exist.
+noSuchVolumeException=Volume %volume% does not exist.
+volumeIsInUse=Volume %volume% is in use.
